# cipal

./: .gitignore  1_unit_test.py  2_process.html  2_process.ipynb  3_canonical.html  3_canonical.ipynb  README.md  cipal.py  pyproject.toml
